Invoice API except set status
