# rest/api/invoice/connection.js
@@ -28,15 +28,65 @@ module.exports.createInvoice = (req, res, next) => {
       next(err);
     });
 };
+module.exports.getMyInvoices = (req, res, next) => {
+  debug('getMyInvoices');
+  const ID = req.swagger.params.userid.value;
+  Invoicing.getMyOwn(req.app.locals.db, req.auth, ID)
+    .then((allInvoices) => {
+      res.json(allInvoices);
+    })
+    .catch((err) => {
+      next(err);
+    });
+};
 module.exports.getInvoice = (req, res, next) => {
-  throw ErrorHelper.getCustomError(501, ErrorHelper.CODE.NOT_IMPLEMENTED, 'Not Implemented');
+  debug('getInvoice');
+  const userID = req.swagger.params.userid.value;
+  const ID = req.swagger.params.id.value;
+  Invoicing.getOne(req.app.locals.db, req.auth, userID, ID)
+    .then((invc) => {
+      res.json(invc);
+    })
+    .catch((err) => {
+      next(err);
+    });
 };
 module.exports.changeInvoice = (req, res, next) => {
-  throw ErrorHelper.getCustomError(501, ErrorHelper.CODE.NOT_IMPLEMENTED, 'Not Implemented');
+  debug('changeInvoice');
+  const userID = req.swagger.params.userid.value;
+  const ID = req.swagger.params.id.value;
+  const data = req.swagger.params.body.value;
+  Invoicing.modifyCreatedInvoice(req.app.locals.db, req.auth, userID, ID, data)
+    .then((invc) => {
+      res.json(invc);
+    })
+    .catch((err) => {
+      next(err);
+    });
 };
 module.exports.removeInvoice = (req, res, next) => {
-  throw ErrorHelper.getCustomError(501, ErrorHelper.CODE.NOT_IMPLEMENTED, 'Not Implemented');
+  debug('removeInvoice');
+  const userID = req.swagger.params.userid.value;
+  const ID = req.swagger.params.id.value;
+  Invoicing.removeOne(req.app.locals.db, req.auth, userID, ID)
+    .then(() => {
+      res.json();
+    })
+    .catch((err) => {
+      next(err);
+    });
 };
 module.exports.updateInvoiceStatus = (req, res, next) => {
-  throw ErrorHelper.getCustomError(501, ErrorHelper.CODE.NOT_IMPLEMENTED, 'Not Implemented');
+  debug('updateInvoiceStatus');
+  const userID = req.swagger.params.userid.value;
+  const ID = req.swagger.params.id.value;
+  const status = req.swagger.params.status.value;
+  const data = req.swagger.params.body.value;
+  Invoicing.setStatusDate(req.app.locals.db, req.auth, userID, ID, status, data)
+    .then((invc) => {
+      res.json(invc);
+    })
+    .catch((err) => {
+      next(err);
+    });
 };
